k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  labels:
    app: platform-app
spec:
  type: ClusterIP
  selector:
    app: platform-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
